--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML</h3>
+                  <h3>HTML/CSS</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -148,7 +148,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>CSS</h3>
+                  <h3>C/C+</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -196,10 +196,33 @@
                   <p>Intermediate</p>
                 </div>
               </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h4>SQL</h4>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h4>R</h4>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Developer Tools & Frameworks</h2>
             <div class="article-container">
               <article>
                 <img
@@ -208,7 +231,40 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SQL</h3>
+                  <h3>Git</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Node.js/Express.js</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>React</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>JavaScript</h3>
                   <p>Basic</p>
                 </div>
               </article>
@@ -219,7 +275,18 @@
                   class="icon"
                 />
                 <div>
-                  <h3>R</h3>
+                  <h3>Boostrap</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Next.js</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -230,7 +297,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>MATLAB</h3>
+                  <h4>Jest</h4>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -241,10 +308,11 @@
                   class="icon"
                 />
                 <div>
-                  <h3>C/C+</h3>
+                  <h4>Linux/MacOS</h4>
                   <p>Intermediate</p>
                 </div>
               </article>
+
             </div>
           </div>
         </div>
